added package read time in course