@@ -5,6 +5,7 @@ import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import vacademy.io.admin_core_service.features.auth_service.service.AuthService;
+import vacademy.io.admin_core_service.features.chapter.enums.ChapterStatus;
 import vacademy.io.admin_core_service.features.common.enums.StatusEnum;
 import vacademy.io.admin_core_service.features.course.dto.AddCourseDTO;
 import vacademy.io.admin_core_service.features.faculty.enums.FacultyStatusEnum;
@@ -17,11 +18,12 @@ import vacademy.io.admin_core_service.features.packages.enums.PackageStatusEnum;
 import vacademy.io.admin_core_service.features.packages.repository.PackageRepository;
 import vacademy.io.admin_core_service.features.session.dto.AddNewSessionDTO;
 import vacademy.io.admin_core_service.features.session.service.SessionService;
+import vacademy.io.admin_core_service.features.slide.enums.QuestionStatusEnum;
+import vacademy.io.admin_core_service.features.slide.enums.SlideStatus;
 import vacademy.io.common.auth.dto.UserDTO;
 import vacademy.io.common.auth.model.CustomUserDetails;
 import vacademy.io.common.core.standard_classes.ListService;
 import vacademy.io.common.exceptions.VacademyException;
-import vacademy.io.common.institute.dto.PackageDTO;
 import vacademy.io.common.institute.entity.PackageEntity;
 
 import java.util.*;
@@ -41,49 +43,57 @@ public class PackageService {
     private SessionService sessionService;
 
     public Page<PackageDetailDTO> getcourseCatalogDetail(
-        LearnerPackageFilterDTO learnerPackageFilterDTO,
-        String instituteId,
-        int pageNo,
-        int pageSize) {
+            LearnerPackageFilterDTO learnerPackageFilterDTO,
+            String instituteId,
+            int pageNo,
+            int pageSize) {
 
         Sort thisSort = ListService.createSortObject(learnerPackageFilterDTO.getSortColumns());
         Pageable pageable = PageRequest.of(pageNo, pageSize, thisSort);
 
         Page<PackageDetailProjection> learnerPackageDetail = null;
-        if (StringUtils.hasText(learnerPackageFilterDTO.getSearchByName())){
-            learnerPackageDetail= packageRepository.getCatalogPackageDetail(
-                learnerPackageFilterDTO.getSearchByName(),
-                learnerPackageFilterDTO.getFacultyIds(),
-                instituteId,
-                List.of(PackageStatusEnum.ACTIVE.name()),
-                List.of(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()),
-                List.of(LevelStatusEnum.ACTIVE.name()),
-                List.of(StatusEnum.ACTIVE.name()),
-                List.of(StatusEnum.ACTIVE.name()),
-                pageable
+        if (StringUtils.hasText(learnerPackageFilterDTO.getSearchByName())) {
+            learnerPackageDetail = packageRepository.getCatalogPackageDetail(
+                    learnerPackageFilterDTO.getSearchByName(),
+                    learnerPackageFilterDTO.getFacultyIds(),
+                    instituteId,
+                    List.of(PackageStatusEnum.ACTIVE.name()),
+                    List.of(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()),
+                    List.of(LevelStatusEnum.ACTIVE.name()),
+                    List.of(StatusEnum.ACTIVE.name()),
+                    List.of(StatusEnum.ACTIVE.name()),
+                    List.of(QuestionStatusEnum.ACTIVE.name()),
+                    List.of(QuestionStatusEnum.ACTIVE.name()),
+                    List.of(SlideStatus.DRAFT.name(), SlideStatus.PUBLISHED.name(), SlideStatus.UNSYNC.name()),
+                    List.of(ChapterStatus.ACTIVE.name()),
+                    pageable
             );
-        }else{
-            learnerPackageDetail= packageRepository.getCatalogPackageDetail(
-                instituteId,
-                learnerPackageFilterDTO.getLevelIds(),
-                List.of(PackageStatusEnum.ACTIVE.name()),
-                List.of(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()),
-                learnerPackageFilterDTO.getFacultyIds(),
-                List.of(StatusEnum.ACTIVE.name()),
-                learnerPackageFilterDTO.getTag(),
-                List.of(LevelStatusEnum.ACTIVE.name()),
-                List.of(StatusEnum.ACTIVE.name()),
-                pageable
+        } else {
+            learnerPackageDetail = packageRepository.getCatalogPackageDetail(
+                    instituteId,
+                    learnerPackageFilterDTO.getLevelIds(),
+                    List.of(PackageStatusEnum.ACTIVE.name()),
+                    List.of(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()),
+                    learnerPackageFilterDTO.getFacultyIds(),
+                    List.of(StatusEnum.ACTIVE.name()),
+                    learnerPackageFilterDTO.getTag(),
+                    List.of(LevelStatusEnum.ACTIVE.name()),
+                    List.of(StatusEnum.ACTIVE.name()),
+                    List.of(QuestionStatusEnum.ACTIVE.name()),
+                    List.of(QuestionStatusEnum.ACTIVE.name()),
+                    List.of(SlideStatus.DRAFT.name(), SlideStatus.PUBLISHED.name(), SlideStatus.UNSYNC.name()),
+                    List.of(ChapterStatus.ACTIVE.name()),
+                    pageable
             );
         }
 
         // Get all instructor userIds
         List<String> instructorIds = learnerPackageDetail.getContent().stream()
-            .map(PackageDetailProjection::getFacultyUserIds)
-            .filter(Objects::nonNull)
-            .flatMap(List::stream)
-            .distinct()
-            .collect(Collectors.toList());
+                .map(PackageDetailProjection::getFacultyUserIds)
+                .filter(Objects::nonNull)
+                .flatMap(List::stream)
+                .distinct()
+                .collect(Collectors.toList());
 
         // Fetch instructor details
         List<UserDTO> userDTOS = authService.getUsersFromAuthServiceByUserIds(instructorIds);
@@ -92,32 +102,33 @@ public class PackageService {
         // Map projections to DTOs
         List<PackageDetailDTO> dtos = learnerPackageDetail.getContent().stream().map(projection -> {
             List<UserDTO> instructors = Optional.ofNullable(projection.getFacultyUserIds())
-                .orElse(List.of()).stream()
-                .map(userMap::get)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                    .orElse(List.of()).stream()
+                    .map(userMap::get)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
 
             return new PackageDetailDTO(
-                projection.getId(),
-                projection.getPackageName(),
-                projection.getThumbnailFileId(),
-                projection.getIsCoursePublishedToCatalaouge(),
-                projection.getCoursePreviewImageMediaId(),
-                projection.getCourseBannerMediaId(),
-                projection.getCourseMediaId(),
-                projection.getWhyLearnHtml(),
-                projection.getWhoShouldLearnHtml(),
-                projection.getAboutTheCourseHtml(),
-                projection.getCommaSeparetedTags(),
-                projection.getCourseDepth(),
-                projection.getCourseHtmlDescriptionHtml(),
-                projection.getPercentageCompleted(),
-                projection.getRating(),
-                projection.getPackageSessionId(),
-                projection.getLevelId(),
-                projection.getLevelName(),
-                instructors,
-                    projection.getLevelIds()
+                    projection.getId(),
+                    projection.getPackageName(),
+                    projection.getThumbnailFileId(),
+                    projection.getIsCoursePublishedToCatalaouge(),
+                    projection.getCoursePreviewImageMediaId(),
+                    projection.getCourseBannerMediaId(),
+                    projection.getCourseMediaId(),
+                    projection.getWhyLearnHtml(),
+                    projection.getWhoShouldLearnHtml(),
+                    projection.getAboutTheCourseHtml(),
+                    projection.getCommaSeparetedTags(),
+                    projection.getCourseDepth(),
+                    projection.getCourseHtmlDescriptionHtml(),
+                    projection.getPercentageCompleted(),
+                    projection.getRating(),
+                    projection.getPackageSessionId(),
+                    projection.getLevelId(),
+                    projection.getLevelName(),
+                    instructors,
+                    projection.getLevelIds(),
+                    projection.getReadTimeInMinutes()
             );
         }).toList();
 
@@ -128,7 +139,7 @@ public class PackageService {
             String packageId
     ) {
         Optional<PackageDetailProjection> optionalProjection =
-                packageRepository.getPackageDetailByIdWithSessionAndFacultyStatus(packageId, List.of(PackageSessionStatusEnum.ACTIVE.name(),PackageSessionStatusEnum.HIDDEN.name()), List.of(FacultyStatusEnum.ACTIVE.name()),List.of(StatusEnum.ACTIVE.name()));
+                packageRepository.getPackageDetailByIdWithSessionAndFacultyStatus(packageId, List.of(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()), List.of(FacultyStatusEnum.ACTIVE.name()), List.of(StatusEnum.ACTIVE.name()));
 
         if (optionalProjection.isEmpty()) {
             throw new VacademyException("Package not found");
@@ -169,29 +180,30 @@ public class PackageService {
                 projection.getLevelId(),
                 projection.getLevelName(),
                 instructors,
-                projection.getLevelIds()
+                projection.getLevelIds(),
+                projection.getReadTimeInMinutes()
         );
 
         return dto;
     }
 
-    public void addOrUpdatePackage(AddCourseDTO addCourseDTO,String instituteId,CustomUserDetails userDetails) {
+    public void addOrUpdatePackage(AddCourseDTO addCourseDTO, String instituteId, CustomUserDetails userDetails) {
         PackageEntity packageEntity = null;
-        if (addCourseDTO.getNewCourse()){
-            packageEntity = getCourse(addCourseDTO,instituteId);
-        }else{
+        if (addCourseDTO.getNewCourse()) {
+            packageEntity = getCourse(addCourseDTO, instituteId);
+        } else {
             packageEntity = packageRepository.findById(addCourseDTO.getId()).orElseThrow(() -> new VacademyException("Package not found"));
             updateCourse(addCourseDTO, packageEntity);
         }
-        for (AddNewSessionDTO addNewSessionDTO:addCourseDTO.getSessions()){
-            sessionService.addOrUpdateSession(addNewSessionDTO, packageEntity,instituteId,userDetails);
+        for (AddNewSessionDTO addNewSessionDTO : addCourseDTO.getSessions()) {
+            sessionService.addOrUpdateSession(addNewSessionDTO, packageEntity, instituteId, userDetails);
         }
     }
 
-    public PackageEntity getCourse(AddCourseDTO addCourseDTO,String instituteId) {
-        Optional<PackageEntity>optionalPackageEntity = packageRepository.findTopByPackageNameAndSessionStatusAndInstitute(addCourseDTO.getCourseName(),
+    public PackageEntity getCourse(AddCourseDTO addCourseDTO, String instituteId) {
+        Optional<PackageEntity> optionalPackageEntity = packageRepository.findTopByPackageNameAndSessionStatusAndInstitute(addCourseDTO.getCourseName(),
                 Arrays.asList(PackageSessionStatusEnum.ACTIVE.name(), PackageSessionStatusEnum.HIDDEN.name()),
-                Arrays.asList(PackageStatusEnum.ACTIVE.name()), instituteId);
+                List.of(PackageStatusEnum.ACTIVE.name()), instituteId);
         if (optionalPackageEntity.isPresent()) {
             return optionalPackageEntity.get();
         }
